# dmsr

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  config.yaml
app/src/: args.rs  config.rs  logger.rs  main.rs  routes.rs  state.rs  yaml.rs
app/src/routes/: connector.rs  index.rs
dms/: Cargo.toml  Makefile  run_test.sh
dms/src/: connector.rs  connectors.rs  database.rs  decoding.rs  error.rs  event.rs  events.rs  kafka.rs  lib.rs  message.rs  queue.rs  sink_connector.rs  source_connector.rs  sources.rs  sources_targets.rs  streamers.rs  targets.rs  types.rs
dms/src/connector/: config.rs  connector.rs  kind.rs  mysql_source.rs  output.rs  postgres_source.rs  row_data_operation.rs  source_connector.rs  type.rs
dms/src/connector/mysql_source/: binlog_struct.rs  config.rs  connector.rs  decoder.rs  decoding.rs  event.rs  metadata.rs  offset_metadata.rs  output.rs  snapshot_impl.rs  stream_impl.rs  table.rs
dms/src/connector/mysql_source/decoding/: decoder.rs  table.rs
dms/src/connector/mysql_source/metadata/: offset.rs  source.rs
dms/src/connector/mysql_source/output/: ddl.rs  offset.rs  row_data.rs
dms/src/connector/postgres_sink/: config.rs  connector.rs
dms/src/connector/postgres_source/: config.rs  connector.rs  event.rs  metadata.rs  pgoutput.rs  types.rs
dms/src/connector/postgres_source/pgoutput/: events.rs  utils.rs
dms/src/connectors/: config.rs  connector.rs
dms/src/decoding/pgoutput/: events.rs  utils.rs
dms/src/error/: error.rs  generic.rs  missing_value.rs  unknown_connector.rs
dms/src/event/: event.rs  message.rs
dms/src/events/: event.rs  event_kind.rs  event_stream.rs  event_type.rs  postgres_event.rs  raw_postgres_event.rs  standardized_event.rs
dms/src/kafka/: config.rs  json.rs  kafka.rs  kafka_client.rs  kafka_impl.rs  message.rs  metadata.rs  payload.rs
dms/src/kafka/payload/: base.rs  ddl_payload.rs  offset_payload.rs  row_data_payload.rs
dms/src/message/: message.rs  mysql_source.rs  postgres_source.rs
dms/src/queue/: config.rs  kafka.rs  kafka_impl.rs  queue.rs  queue_config.rs  queue_kind.rs
dms/src/sink_connector/: connector.rs  kind.rs  postgres_config.rs  postgres_impl.rs
dms/src/source/: source.rs
dms/src/source_connector/: connector.rs  kind.rs  postgres_impl.rs
dms/src/sources/: config.rs  postgres.rs  postgres_config.rs  source.rs  source_kind.rs  source_type.rs
dms/src/sources_targets/: postgres.rs  source.rs  source_config.rs  source_kind.rs  target.rs  target_config.rs  target_kind.rs
dms/src/streamers/: kafka.rs  kafka_config.rs  streamer.rs  streamer_config.rs  streamer_type.rs
dms/src/targets/: config.rs  postgres.rs  postgres_config.rs  target.rs
dms/src/types/: mysql_types.rs
dms/tests/: docker-compose.yml  kafka.rs
docker/: docker-compose.yml
examples/: Cargo.toml
examples/src/: main.rs
k8s/: README.md
k8s/kafka/: kafka.yaml  kafka_connect.yaml  kafka_ui.yaml  zookeeper.yaml
k8s/mysql/: mysql.yaml
k8s/postgres/: postgres.yaml
src/: lib.rs  source.rs
src/source/: base.rs  config.rs  postgres.rs  source.rs
