[package]
name = "dms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
bytes = "1.4.0"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }

[dependencies.tokio-postgres]
git = "https://github.com/MaterializeInc/rust-postgres"
