[package]
name = "dms"
version = "0.1.0"
edition = "2021"

[lib]
name = "dms"
path = "src/lib.rs"

[[bin]]
name = "dms"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
bytes = "1.4.0"
futures = "0.3.26"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }

[dependencies.tokio-postgres]
git = "https://github.com/MaterializeInc/rust-postgres"
