[package]
name = "dms-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
dms = { path = "../dms" }
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
serde = "1.0.152"
serde_yaml = "0.9.17"
tokio = "1.25.0"
actix-web = "4.3.1"
