[package]
name = "dms"
version = "0.1.0"
edition = "2021"

[lib]
name = "dms"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
bytes = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }
futures = "0.3.26"
rdkafka = "0.29.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
mysql_async = "0.31.3"
mysql_common = "0.29.2"
byteorder = "1.4.3"

[dependencies.tokio-postgres]
git = "https://github.com/MaterializeInc/rust-postgres"
